--- a/dpUpdated/src/main/resources/application.properties
+++ b/dpUpdated/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/diploma
 spring.datasource.username=postgres
 spring.datasource.password=dirtjumper1
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+server.port=8081
 
